stop all the wrapping

--- a/web/ploddle/web/static/css/ploddle.less
+++ b/web/ploddle/web/static/css/ploddle.less
@@ -92,7 +92,7 @@ FOOTER {
 	}
 }
 
-TD.host, TD.timestamp, TD.daemon {
+TD.host, TD.timestamp, TD.daemon, .message TD {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
